Ajout readme et ajout fonction modifier/supprimer un jeu

--- a/RetroGames/wwwroot/index.html
+++ b/RetroGames/wwwroot/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <title>RetroGames - Gestion des jeux</title>
     <link rel="stylesheet" href="style.css" />
 </head>
