--- a/RetroGames/wwwroot/index.html
+++ b/RetroGames/wwwroot/index.html
@@ -22,8 +22,9 @@
 
     <div class="container" id="actionsContainer" style="display:none;">
         <h2>Actions</h2>
-        <button id="getGamesBtn">Afficher la liste des jeux</button>
+        <button id="getGamesBtn">Afficher la liste de tous les jeux</button>
         <button id="showCreateGameBtn">Créer un nouveau jeu</button>
+        <button id="showSearchBarBtn" style="margin-left:10px;">Rechercher</button>
         <div id="filterButtons"></div>
     </div>
 
@@ -47,7 +48,15 @@
         </form>
         <div id="gameResult"></div>
     </div>
-
+    <div id="searchModal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.3); z-index:1000; justify-content:center; align-items:center;">
+        <div style="background:white; padding:30px 20px 20px 20px; border-radius:8px; min-width:300px; max-width:90vw; box-shadow:0 2px 10px rgba(0,0,0,0.2); position:relative;">
+            <button id="closeSearchModal" style="position:absolute; top:10px; right:10px; background:none; border:none; font-size:20px; cursor:pointer;">&times;</button>
+            <h3>Rechercher un jeu</h3>
+            <input type="text" id="searchTitle" placeholder="Nom du jeu..." style="width:100%; height:32px; margin-bottom:10px;" />
+            <button id="searchGameBtn" style="width:100%; height:32px; background:#007bff; color:white; border:none; border-radius:4px; font-weight:bold;">Rechercher</button>
+            <div id="searchResultMsg" style="margin-top:10px; color:#d9534f;"></div>
+        </div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
