modif fichier html

--- a/RetroGames/wwwroot/index.html
+++ b/RetroGames/wwwroot/index.html
@@ -24,7 +24,7 @@
         <h2>Actions</h2>
         <button id="getGamesBtn">Afficher la liste de tous les jeux</button>
         <button id="showCreateGameBtn">Créer un nouveau jeu</button>
-        <button id="showSearchBarBtn" style="margin-left:10px;">Rechercher</button>
+        <button id="showSearchBarBtn" style="margin-left:10px;">Rechercher un jeu</button>
         <div id="filterButtons"></div>
     </div>
 
